package com.example.todoapp.database.model

import androidx.room.ColumnInfo
import androidx.room.Entity
import androidx.room.PrimaryKey

@Entity(tableName = "users")
data class UserDb(
    @PrimaryKey val userId: String,
    @ColumnInfo(name = "user_img") val userImg: String?,
    @ColumnInfo(name = "security_enabled", defaultValue = "false") var securityEnabled: Boolean = false
)
